--- a/BioticAtlas/Code/01-SpeciesAtlas.Rmd
+++ b/BioticAtlas/Code/01-SpeciesAtlas.Rmd
@@ -39,30 +39,17 @@ library(raster)
 #             Biotic data
 # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
 # Biotic data
-load('../../BioticData/Combine_RelevePluriSp_MPO/Data/CombinePluri.RData')
-load('../../BioticData/ObsMer_1999-2015_MPO/Data/Biotic/SeaObserver.RData')
-load('../../BioticData/Peche_sentinelle_2011-2015/Data/Biotic/SentinelleFixed.RData')
-load('../../BioticData/Peche_sentinelle_2011-2015/Data/Biotic/SentinelleMobile.RData')
-load('../../BioticData/ZIF-Fisheries-2010-2015/Data/Biotic/zif.RData')
-
-# Select single column
-pluri <- pluri[,'species']
-obs <- obs[,'species']
-sentFix <- sentFix[,'species']
-sentMob <- sentMob[,'species']
-zif <- zif[,'species']
-
-# Single object
-biotic <- rbind(pluri, obs, sentFix, sentMob, zif)
-
+load('../../BioticData/SpeciesOccurrence/Data/SpeciesOccurrences.RData')
+# load('./BioticData/SpeciesOccurrence/Data/SpeciesOccurrences.RData')
 
 # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
 #             Species list
 # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
 load('../../BioticData/SpeciesList/Data/SpeciesList.RData')
+# load('./BioticData/SpeciesList/Data/SpeciesList.RData')
 
 # Minimum record number accepted (subjective)
-minRec <- 30
+minRec <- 50
 
 # Filter
 sp <- sp %>%
@@ -71,20 +58,25 @@ sp <- sp %>%
 # Number of species
 nSp <- nrow(sp)
 
-# Biotic subset
-uid <- biotic$species %in% sp$species
-biotic <- biotic[uid, ]
 
 # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
 #        Predicted distributions
 # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
-load('../../BioticDistribution/GLM/Data/predictionGLM.RData')
+load('../../BioticDistribution/RandomForest/Data/RandForest_Regression.RData')
+load('../../BioticDistribution/RandomForest/Data/RandForest_Regression_Smooth.RData')
+load('../../BioticDistribution/RandomForest/Data/RandForest_Classification.RData')
+load('../../BioticDistribution/RandomForest/Data/RandForest_Classification_Smooth.RData')
+# load('./BioticDistribution/RandomForest/Data/RandForest_Regression.RData')
+# load('./BioticDistribution/RandomForest/Data/RandForest_Regression_Smooth.RData')
+# load('./BioticDistribution/RandomForest/Data/RandForest_Classification.RData')
+# load('./BioticDistribution/RandomForest/Data/RandForest_Classification_Smooth.RData')
 
 
 # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
 #              Study area
 # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
 load('../../eDriversGrids/Data/egslSimple.RData')
+# load('./eDriversGrids/Data/egslSimple.RData')
 
 
 # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
@@ -101,6 +93,11 @@ load('../../eDriversGrids/Data/egslSimple.RData')
 # rbPal <- colorRampPalette(c('#ffffff','#DBE1E1','#B8C9C6','#869E9B','#5A7475','#435259'))
 # rbPal <- colorRampPalette(c('#2C3154','#2F4A73','#2B8F9C','#58B79D','#D3AA45'))
 rbPal <- colorRampPalette(c('#e4ffff','#14808C','#085061','#692932','#fa6d6d'))
+
+# -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
+#           Graphic layout
+# -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
+mat <- matrix(c(0,1,1,6,2,2,3,3,4,4,5,5), ncol = 4, nrow = 3, byrow = T)
 ```
 
 
@@ -110,7 +107,7 @@ rbPal <- colorRampPalette(c('#e4ffff','#14808C','#085061','#692932','#fa6d6d'))
 This document is an atlas of species distribution models for the Estuary and
 Gulf of St. Lawrence in Eastern Canada.
 
-```{r echo = FALSE, fig.height = 6, fig.width = 6, fig.align = 'center'}
+```{r echo = FALSE, fig.height = 10, fig.width = 10, fig.align = 'center'}
 par(mar = c(0,0,0,0))
 plot(st_geometry(egslSimple))
 plot(st_geometry(biotic), pch = 20, cex = .1, col = '#5d5e5c', add = T)
@@ -119,9 +116,9 @@ plot(st_geometry(biotic), pch = 20, cex = .1, col = '#5d5e5c', add = T)
 \pagebreak
 
 
-```{r echo = FALSE, results = 'asis', fig.height = 6, fig.width = 12, fig.align = 'center'}
+```{r echo = FALSE, results = 'asis', fig.height = 14, fig.width = 12, fig.align = 'center'}
 # Loop through species
-for(i in 1:nSp) {
+for(i in 1:1) {
   # Section title (taxa name)
   cat('\n')
   cat("#", paste(sp$species[i]), "\n")
@@ -134,14 +131,52 @@ for(i in 1:nSp) {
   uid <- biotic$species == sp$species[i]
 
   # Plot empirical data
-  par(mfrow = c(1,2), mar = c(0,0,0,3.75))
+  layout(mat)#, heights = c(1,.8,.8), widths = c(.8,1,1,.8))
+  par(mar = c(1,1,1,1))
+
+  # Study area
   plot(st_geometry(egslSimple))
-  plot(st_geometry(biotic[uid, ]), pch = 20, cex = .75, col = '#5d5e5c66', add = T)
+
+  # Absences
+  uid2 <- biotic$presence[uid] == 0
+  plot(st_geometry(biotic[uid[uid2], ]), pch = 20, cex = .75, col = '#8a383888', add = T)
+
+  # Presences
+  uid2 <- biotic$presence[uid] == 1
+  plot(st_geometry(biotic[uid[uid2], ]), pch = 20, cex = .75, col = '#4d81a788', add = T)
+
 
   # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
   #    Species predicted distribution
   # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
-  plot(spPred[[i]], col = rbPal(256), zlim = c(0,1), axes = F, box = F)
+  # Regression
+  par(mar = c(1,2.5,1,2.5))
+  image(RF_regression[[i]], col = rbPal(256), zlim = c(0,1), axes = F,
+        ylab = '', xlab = '', main = 'Random forest - Regression')
+
+  # Smoothed regression
+  image(RF_regression_smooth[[i]], col = rbPal(256), zlim = c(0,1), axes = F,
+        ylab = '', xlab = '', main = 'Random forest - Regression - Smoothed')
+
+  # Classification
+  image(RF_classification[[i]], col = rbPal(256), zlim = c(0,1), axes = F,
+        ylab = '', xlab = '', main = 'Random forest - Classification')
+
+  # Smoothed regression
+  image(RF_classification_smooth[[i]], col = rbPal(256), zlim = c(0,1), axes = F,
+        ylab = '', xlab = '', main = 'Random forest - Classification - Smoothed')
+
+  # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
+  #              Legend
+  # -=-=-=-=-=-=-=-=-=--=-=-=-=-=-=-=-=-=-
+  graphicsutils::plot0()
+  points(x = -1, y = .75, pch = 20, cex = 2, col = '#4d81a7')
+  points(x = -1, y = .6, pch = 20, cex = 2, col = '#8a3838')
+  text(x = -.75, y = .75, 'Presence', cex  = 1.25, adj = c(0,.5), font = 2)
+  text(x = -.75, y = .6, 'Absence*', cex  = 1.25, adj = c(0,.5), font = 2)
+  text(x = -.75, y = .45, '*Sometimes includes\npseudo absences', cex = .9, adj = c(0,.5))
+
+  # Page break
   cat('\n\n\\pagebreak\n')
 }
 ```
