--- a/BioticAtlas/Code/01-SpeciesAtlas.Rmd
+++ b/BioticAtlas/Code/01-SpeciesAtlas.Rmd
@@ -107,18 +107,18 @@ mat <- matrix(c(0,1,1,6,2,2,3,3,4,4,5,5), ncol = 4, nrow = 3, byrow = T)
 This document is an atlas of species distribution models for the Estuary and
 Gulf of St. Lawrence in Eastern Canada.
 
-```{r echo = FALSE, fig.height = 10, fig.width = 10, fig.align = 'center'}
+<!-- {r echo = FALSE, fig.height = 10, fig.width = 10, fig.align = 'center'} */
 par(mar = c(0,0,0,0))
 plot(st_geometry(egslSimple))
 plot(st_geometry(biotic), pch = 20, cex = .1, col = '#5d5e5c', add = T)
-```
+-->
 
 \pagebreak
 
 
 ```{r echo = FALSE, results = 'asis', fig.height = 14, fig.width = 12, fig.align = 'center'}
 # Loop through species
-for(i in 1:1) {
+for(i in 1:nSp) {
   # Section title (taxa name)
   cat('\n')
   cat("#", paste(sp$species[i]), "\n")
